# ra4m2-hal

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  memory.x
example/: i2c.rs  timer_driver.rs
examples/gpio/: Cargo.toml
examples/gpio/src/: main.rs
examples/i2c/: Cargo.toml
examples/i2c/.cargo/: config.toml
examples/i2c/src/: main.rs
src/: demo.rs  gpio.rs  gpio4.rs  i2c.rs  icu.rs  lib.rs  pfsel.rs  port_map.rs  power.rs  sysc.rs  time_driver.rs
