[package]
name = "ra4m2-hal"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license = "MIT"

[dependencies]
ra4m2-pac = { git = "https://github.com/amcelroy/ra-pac", features = ["all", "rt"] }
cortex-m = { version = "0.7", features = [ "critical-section-single-core",], default-features = false }
cortex-m-rt = { version = "0.7" }
embedded-hal = { version = "1.0.0" }
embedded-time = { version = "0.12.1" }
pictorus-renesas = { path="../pictorus-rs/pictorus-renesas" }

[features]
default = ["embedded_time", "iic0", "port4"]

embedded_time = ["agt0"]

agt0 = []
iic0 = []
iic1 = []
port4 = []
