[package]
name = "example-gpio"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cortex-m = { version = "0.7", features = [ "critical-section-single-core",], default-features = false }
cortex-m-rt = { version = "0.7" }
embedded-alloc = { version = "0.6.0", default-features = false, features = ["llff"] }
embedded-hal = { version = "1.0.0" }
log = { version = "0.4.21", default-features = false }
panic-probe = { version = "1.0.0", features = [ "print-rtt",], default-features = false }
rtt-target = { git = "https://github.com/Pictorus-Labs/rtt-target", branch = "alignment-fix", default-features = false, features = ["log"] }
ra4m2-hal = { path = "../../../ra4m2-hal", features = ["port0", "port1", "port2", "port3", "port4", "port5", "port6", "port7"] }
